HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/GenericInfiniteMonomorphization/Expected.uv
//! Expected diagnostic metadata for the GenericInfiniteMonomorphization rejected-source specimen.

expectedDiagnostic("E-TYP-2307", "req.GenericInfiniteMonomorphizationRejected")
